Finding the most dominant channel(Red, Green, Blue) in the first frame of the query video

--- a/src/shotBoundary.ipynb
+++ b/src/shotBoundary.ipynb
@@ -144,6 +144,47 @@
     "\n",
     "print(find_subarray_np(original_video_differences, query_video_differences))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "G\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_dominant_color(frame):\n",
+    "    # Split the frame into its RGB channels\n",
+    "    b, g, r = cv2.split(frame)\n",
+    "    \n",
+    "    # Calculate the mean intensity of each channel\n",
+    "    mean_r = np.mean(r)\n",
+    "    mean_g = np.mean(g)\n",
+    "    mean_b = np.mean(b)\n",
+    "    \n",
+    "    # Compare the mean intensities to find the dominant channel\n",
+    "    if mean_r > mean_g and mean_r > mean_b:\n",
+    "        return \"R\"\n",
+    "    elif mean_g > mean_r and mean_g > mean_b:\n",
+    "        return \"G\"\n",
+    "    else:\n",
+    "        return \"B\"\n",
+    "\n",
+    "query_file_path = '../dataset/queries/joker_query.mp4'\n",
+    "cap = cv2.VideoCapture(query_file_path)\n",
+    "\n",
+    "ret, frame = cap.read()\n",
+    "\n",
+    "cap.release()\n",
+    "\n",
+    "print(find_dominant_color(frame))"
+   ]
   }
  ],
  "metadata": {
