Changed file path due to change in directory structure

--- a/src/shotBoundary/shotBoundary.ipynb
+++ b/src/shotBoundary/shotBoundary.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Salil\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "VideoManager is deprecated and will be removed.\n",
       "`base_timecode` argument is deprecated and has no effect.\n",
       "VideoManager is deprecated and will be removed.\n"
@@ -127,14 +125,14 @@
     "    return shot_boundaries\n",
     "\n",
     "def query(original_differences):\n",
-    "    query_file_path = '../dataset/queries/joker_query2.mp4'\n",
+    "    query_file_path = '../../dataset/queries/joker_query2.mp4'\n",
     "    query_video_boundaries = find_scenes(query_file_path)\n",
     "    query_differences = compute_differences(query_video_boundaries)\n",
     "    return query_differences[:-1]\n",
     "\n",
     "\n",
     "# Example usage:\n",
-    "video_file_path = '../dataset/originals/joker.mp4'\n",
+    "video_file_path = '../../dataset/originals/joker.mp4'\n",
     "original_video_boundaries = find_scenes(video_file_path)\n",
     "original_video_differences = compute_differences(original_video_boundaries)\n",
     "print(original_video_boundaries)\n",
@@ -162,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
