"Audio MFCC based signature that gives the starting and ending frames/timestamps of the query video"

--- a/src/shotBoundary/shotBoundary.ipynb
+++ b/src/shotBoundary/shotBoundary.ipynb
@@ -9,7 +9,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "VideoManager is deprecated and will be removed.\n",
+      "VideoManager is deprecated and will be removed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "`base_timecode` argument is deprecated and has no effect.\n",
       "VideoManager is deprecated and will be removed.\n"
      ]
@@ -160,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
