"Added logic for identifying the starting and ending frames of the query video to the Shot Boundary signature"

--- a/src/shotBoundary/shotBoundary.ipynb
+++ b/src/shotBoundary/shotBoundary.ipynb
@@ -56,10 +56,13 @@
     "from scenedetect import VideoManager\n",
     "from scenedetect import SceneManager\n",
     "from scenedetect.detectors import ContentDetector\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "import numpy as np\n",
+    "from moviepy.editor import VideoFileClip\n",
     "\n",
-    "unrounded_differences = []\n",
+    "def get_video_duration(video_file_path):\n",
+    "    with VideoFileClip(video_file_path) as video:\n",
+    "        return video.duration  # duration in seconds\n",
     "\n",
     "def find_subarray_np(main_array, sub_array):\n",
     "    main_array = np.array(main_array)\n",
@@ -68,35 +71,38 @@
     "\n",
     "    print(main_array)\n",
     "    print(sub_array)\n",
-    "    \n",
-    "    # Create a view into the main array with the same length as the subarray\n",
+    "\n",
     "    strided = np.lib.stride_tricks.sliding_window_view(main_array, window_shape=sub_len)\n",
-    "    \n",
-    "    # Find all positions where the strided version matches the subarray\n",
+    "\n",
     "    matches = np.all(strided == sub_array, axis=1)\n",
-    "    \n",
-    "    # Get the indices of the matches\n",
+    "\n",
     "    indices = np.where(matches)[0]\n",
     "    \n",
     "    if indices.size > 0:\n",
     "        return indices\n",
     "    else:\n",
-    "        return -1  # Return -1 if subarray not found\n",
+    "        return -1\n",
     "\n",
     "# Function to parse timecodes into timedelta objects\n",
     "def parse_timecode(time_str):\n",
     "    # Format: 'HH:MM:SS.sss'\n",
     "    return datetime.strptime(time_str, \"%H:%M:%S.%f\")\n",
     "\n",
+    "# Function to convert seconds into hh:mm:ss.sss format\n",
+    "def seconds_to_timestamp(seconds):\n",
+    "    td = timedelta(seconds=seconds)\n",
+    "    str_time = str(td)\n",
+    "    hours, minutes, seconds = str_time.split(':')\n",
+    "    seconds, microseconds = seconds.split('.')\n",
+    "    milliseconds = f\"{int(microseconds):03d}\"[:3]\n",
+    "    return f\"{hours}:{minutes}:{seconds}.{milliseconds}\"\n",
+    "\n",
     "# Function to compute differences in timestamps\n",
     "def compute_differences(timestamps):\n",
-    "    # Convert all timestamps to timedelta objects\n",
     "    times = [parse_timecode(t) for t in timestamps]\n",
     "    \n",
-    "    # Calculate differences between consecutive timestamps\n",
     "    differences = []\n",
     "    for i in range(1, len(times)):\n",
-    "        # Compute difference and convert to total seconds (or any other unit)\n",
     "        diff = (times[i] - times[i-1]).total_seconds()\n",
     "        differences.append(round(diff, 2))\n",
     "    return differences\n",
@@ -128,25 +134,61 @@
     "        #print(f'Scene {i+1}: Start {scene[0].get_timecode()} - End {scene[1].get_timecode()}')\n",
     "\n",
     "    video_manager.release()\n",
-    "    return shot_boundaries\n",
+    "    return [shot_boundaries, scene_list]\n",
     "\n",
-    "def query(original_differences):\n",
-    "    query_file_path = '../../dataset/queries/joker_query2.mp4'\n",
-    "    query_video_boundaries = find_scenes(query_file_path)\n",
-    "    query_differences = compute_differences(query_video_boundaries)\n",
-    "    return query_differences[:-1]\n",
+    "def compute_time_difference(time1, time2):\n",
+    "    datetime1 = parse_timecode(time1)\n",
+    "    datetime2 = parse_timecode(time2)\n",
     "\n",
+    "    difference = datetime1 - datetime2 if datetime1 > datetime2 else datetime2 - datetime1\n",
+    "\n",
+    "    return difference.total_seconds()\n",
+    "\n",
+    "def get_fps(video_path):\n",
+    "    video = cv2.VideoCapture(video_path)\n",
+    "    fps = video.get(cv2.CAP_PROP_FPS)\n",
+    "    video.release()\n",
+    "    return fps\n",
+    "\n",
+    "def timecode_to_frames(timecode, fps):\n",
+    "    time_obj = parse_timecode(timecode)\n",
+    "    total_seconds = time_obj.hour * 3600 + time_obj.minute * 60 + time_obj.second + time_obj.microsecond / 1e6\n",
+    "    frame_number = int(round(total_seconds * fps))\n",
+    "    return frame_number\n",
     "\n",
     "# Example usage:\n",
-    "video_file_path = '../../dataset/originals/joker.mp4'\n",
-    "original_video_boundaries = find_scenes(video_file_path)\n",
+    "video_file_path = 'dataset/originals/joker.mp4'\n",
+    "query_file_path = 'dataset/queries/joker_query3.mp4'\n",
+    "\n",
+    "original_video_boundaries, original_scenes = find_scenes(video_file_path)\n",
     "original_video_differences = compute_differences(original_video_boundaries)\n",
-    "print(original_video_boundaries)\n",
-    "print(original_video_differences)\n",
     "\n",
-    "query_video_differences = query(original_video_differences)\n",
+    "query_video_boundaries, query_scenes = find_scenes(query_file_path)\n",
+    "query_video_differences = compute_differences(query_video_boundaries)[:-1]\n",
     "\n",
-    "print(find_subarray_np(original_video_differences, query_video_differences))"
+    "start_index = find_subarray_np(original_video_differences, query_video_differences)[0]\n",
+    "\n",
+    "if(start_index == 0):\n",
+    "    start_time = compute_time_difference(original_video_boundaries[start_index + 1], query_video_boundaries[start_index + 1])\n",
+    "else:\n",
+    "    start_time = compute_time_difference(original_video_boundaries[start_index], query_video_boundaries[0])\n",
+    "\n",
+    "fps = get_fps(video_file_path)\n",
+    "\n",
+    "query_video_duration = get_video_duration(query_file_path)\n",
+    "end_time = start_time + query_video_duration\n",
+    "\n",
+    "start_time = seconds_to_timestamp(start_time)\n",
+    "end_time = seconds_to_timestamp(end_time)\n",
+    "start_frame = timecode_to_frames(start_time, fps)\n",
+    "end_frame = timecode_to_frames(end_time, fps)\n",
+    "\n",
+    "print(f\"Start Time: {start_time} seconds\")\n",
+    "print(f\"End Time: {end_time} seconds\")\n",
+    "print(f\"Start Frame: {start_frame}\")\n",
+    "print(f\"End Frame: {end_frame}\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
