"Motion based signature"

--- a/src/shotBoundary/shotBoundary.ipynb
+++ b/src/shotBoundary/shotBoundary.ipynb
@@ -188,9 +188,7 @@
     "print(f\"Start Time: {start_time} seconds\")\n",
     "print(f\"End Time: {end_time} seconds\")\n",
     "print(f\"Start Frame: {start_frame}\")\n",
-    "print(f\"End Frame: {end_frame}\")\n",
-    "\n",
-    "\n"
+    "print(f\"End Frame: {end_frame}\")\n"
    ]
   }
  ],
