--- a/src/shotBoundary/shotBoundary.ipynb
+++ b/src/shotBoundary/shotBoundary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -24,9 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "List of scene changes:\n",
-      "['00:00:10.719', '00:00:14.598', '00:00:16.892', '00:00:18.101', '00:00:19.186', '00:00:20.145', '00:00:23.941', '00:00:32.032', '00:00:35.160', '00:00:38.330', '00:00:39.998', '00:00:41.500', '00:00:49.091', '00:00:52.469', '00:01:12.281', '00:01:14.283', '00:01:15.450', '00:01:17.077', '00:01:18.036', '00:01:18.704', '00:01:21.164', '00:01:22.666', '00:01:23.875', '00:01:25.002', '00:01:26.128', '00:01:27.087', '00:01:28.213', '00:01:29.256', '00:01:30.173', '00:01:31.383', '00:01:33.260', '00:01:34.052', '00:01:34.845', '00:01:35.637', '00:01:36.763', '00:01:37.806', '00:01:39.349', '00:01:40.475', '00:01:41.226', '00:01:42.561', '00:01:43.937', '00:01:44.730', '00:01:46.023', '00:01:46.898', '00:01:47.899', '00:01:48.650', '00:01:49.401', '00:01:50.277', '00:01:51.278', '00:01:53.238', '00:02:13.800', '00:02:17.220', '00:02:18.972', '00:02:20.182', '00:02:22.017', '00:02:24.019']\n",
-      "[3.88, 2.29, 1.21, 1.08, 0.96, 3.8, 8.09, 3.13, 3.17, 1.67, 1.5, 7.59, 3.38, 19.81, 2.0, 1.17, 1.63, 0.96, 0.67, 2.46, 1.5, 1.21, 1.13, 1.13, 0.96, 1.13, 1.04, 0.92, 1.21, 1.88, 0.79, 0.79, 0.79, 1.13, 1.04, 1.54, 1.13, 0.75, 1.33, 1.38, 0.79, 1.29, 0.88, 1.0, 0.75, 0.75, 0.88, 1.0, 1.96, 20.56, 3.42, 1.75, 1.21, 1.83, 2.0]\n"
+      "List of scene changes:\n"
      ]
     },
     {
@@ -41,13 +39,19 @@
      "output_type": "stream",
      "text": [
       "List of scene changes:\n",
-      "[ 3.88  2.29  1.21  1.08  0.96  3.8   8.09  3.13  3.17  1.67  1.5   7.59\n",
-      "  3.38 19.81  2.    1.17  1.63  0.96  0.67  2.46  1.5   1.21  1.13  1.13\n",
-      "  0.96  1.13  1.04  0.92  1.21  1.88  0.79  0.79  0.79  1.13  1.04  1.54\n",
-      "  1.13  0.75  1.33  1.38  0.79  1.29  0.88  1.    0.75  0.75  0.88  1.\n",
-      "  1.96 20.56  3.42  1.75  1.21  1.83  2.  ]\n",
-      "[8.09 3.13 3.17 1.67]\n",
-      "[6]\n"
+      "[ 0.67  2.43  5.57  9.53  2.    2.3   2.47  0.5   1.67  0.67  0.5   0.5\n",
+      "  0.67  0.5   0.5   0.5   0.5   0.5   0.5  16.93 80.23 29.3   1.4   4.73\n",
+      " 24.87 77.97  5.07 61.9   2.3   2.9   4.03  1.27  2.97  7.57  2.33  1.67\n",
+      "  2.6   3.33  3.2   3.63  0.73 13.37  2.73 26.6   4.17  2.47  3.33  1.1\n",
+      "  7.1   9.9  29.2  21.07  1.   19.23  1.47  1.83  5.3  74.    0.63  3.2\n",
+      "  3.    8.77]\n",
+      "[]\n",
+      "['00:00:09.167', '00:00:09.833', '00:00:12.267', '00:00:17.833', '00:00:27.367', '00:00:29.367', '00:00:31.667', '00:00:34.133', '00:00:34.633', '00:00:36.300', '00:00:36.967', '00:00:37.467', '00:00:37.967', '00:00:38.633', '00:00:39.133', '00:00:39.633', '00:00:40.133', '00:00:40.633', '00:00:41.133', '00:00:41.633', '00:00:58.567', '00:02:18.800', '00:02:48.100', '00:02:49.500', '00:02:54.233', '00:03:19.100', '00:04:37.067', '00:04:42.133', '00:05:44.033', '00:05:46.333', '00:05:49.233', '00:05:53.267', '00:05:54.533', '00:05:57.500', '00:06:05.067', '00:06:07.400', '00:06:09.067', '00:06:11.667', '00:06:15.000', '00:06:18.200', '00:06:21.833', '00:06:22.567', '00:06:35.933', '00:06:38.667', '00:07:05.267', '00:07:09.433', '00:07:11.900', '00:07:15.233', '00:07:16.333', '00:07:23.433', '00:07:33.333', '00:08:02.533', '00:08:23.600', '00:08:24.600', '00:08:43.833', '00:08:45.300', '00:08:47.133', '00:08:52.433', '00:10:06.433', '00:10:07.067', '00:10:10.267', '00:10:13.267', '00:10:22.033']\n",
+      "['00:00:05.500', '00:00:20.000']\n",
+      "Start Time: 0:00:10.167 seconds\n",
+      "End Time: 0:00:30.187 seconds\n",
+      "Start Frame: 305\n",
+      "End Frame: 906\n"
      ]
     }
    ],
@@ -157,8 +161,8 @@
     "    return frame_number\n",
     "\n",
     "# Example usage:\n",
-    "video_file_path = 'dataset/originals/video4_1.mp4'\n",
-    "query_file_path = 'dataset/queries/video4_query.mp4'\n",
+    "video_file_path = '../../dataset/originals/video5.mp4'\n",
+    "query_file_path = '../../dataset/Tests/video5_1_modified.mp4'\n",
     "\n",
     "original_video_boundaries, original_scenes = find_scenes(video_file_path)\n",
     "original_video_differences = compute_differences(original_video_boundaries)\n",
@@ -168,9 +172,10 @@
     "\n",
     "start_index = find_subarray_np(original_video_differences, query_video_differences)[0]\n",
     "\n",
+    "print(original_video_boundaries)\n",
+    "print(query_video_boundaries)\n",
+    "\n",
     "if(start_index == 0):\n",
-    "    print(original_video_boundaries)\n",
-    "    print(query_video_boundaries)\n",
     "    start_time = compute_time_difference(original_video_boundaries[start_index + 1], query_video_boundaries[start_index + 1])\n",
     "else:\n",
     "    start_time = compute_time_difference(original_video_boundaries[start_index], query_video_boundaries[0])\n",
@@ -190,6 +195,198 @@
     "print(f\"Start Frame: {start_frame}\")\n",
     "print(f\"End Frame: {end_frame}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "VideoManager is deprecated and will be removed.\n",
+      "`base_timecode` argument is deprecated and has no effect.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Shot Boundaries present in the query video\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "from scenedetect import VideoManager\n",
+    "from scenedetect import SceneManager\n",
+    "from scenedetect.detectors import ContentDetector\n",
+    "from datetime import datetime, timedelta\n",
+    "import numpy as np\n",
+    "from moviepy.editor import VideoFileClip\n",
+    "import json\n",
+    "\n",
+    "def get_video_duration(video_file_path):\n",
+    "    with VideoFileClip(video_file_path) as video:\n",
+    "        return video.duration  # duration in seconds\n",
+    "\n",
+    "def find_subarray_np(main_array, sub_array):\n",
+    "    main_array = np.array(main_array)\n",
+    "    sub_array = np.array(sub_array)\n",
+    "    sub_len = len(sub_array)\n",
+    "\n",
+    "    # print(main_array)\n",
+    "    # print(sub_array)\n",
+    "\n",
+    "    strided = np.lib.stride_tricks.sliding_window_view(main_array, window_shape=sub_len)\n",
+    "\n",
+    "    matches = np.all(strided == sub_array, axis=1)\n",
+    "\n",
+    "    indices = np.where(matches)[0]\n",
+    "    \n",
+    "    if indices.size > 0:\n",
+    "        return indices\n",
+    "    else:\n",
+    "        return [-1]\n",
+    "\n",
+    "# Function to parse timecodes into timedelta objects\n",
+    "def parse_timecode(time_str):\n",
+    "    # Format: 'HH:MM:SS.sss'\n",
+    "    return datetime.strptime(time_str, \"%H:%M:%S.%f\")\n",
+    "\n",
+    "# Function to convert seconds into hh:mm:ss.sss format\n",
+    "def seconds_to_timestamp(seconds):\n",
+    "    td = timedelta(seconds=seconds)\n",
+    "    str_time = str(td)\n",
+    "    hours, minutes, seconds = str_time.split(':')\n",
+    "    seconds, microseconds = seconds.split('.')\n",
+    "    milliseconds = f\"{int(microseconds):03d}\"[:3]\n",
+    "    return f\"{hours}:{minutes}:{seconds}.{milliseconds}\"\n",
+    "\n",
+    "# Function to compute differences in timestamps\n",
+    "def compute_differences(timestamps):\n",
+    "    times = [parse_timecode(t) for t in timestamps]\n",
+    "    \n",
+    "    differences = []\n",
+    "    for i in range(1, len(times)):\n",
+    "        diff = (times[i] - times[i-1]).total_seconds()\n",
+    "        differences.append(round(diff, 2))\n",
+    "    return differences\n",
+    "\n",
+    "def find_scenes(video_path, threshold=30.0):\n",
+    "    shot_boundaries = []\n",
+    "\n",
+    "    # Create a video manager object for the video.\n",
+    "    video_manager = VideoManager([video_path])\n",
+    "    scene_manager = SceneManager()\n",
+    "    \n",
+    "    # Add the ContentDetector algorithm (with a threshold setting).\n",
+    "    scene_manager.add_detector(ContentDetector(threshold=threshold))\n",
+    "    \n",
+    "    # Start the video manager and perform scene detection.\n",
+    "    video_manager.set_downscale_factor()\n",
+    "    video_manager.start()\n",
+    "\n",
+    "    # Detect scenes and return a list of scenes.\n",
+    "    scene_manager.detect_scenes(frame_source=video_manager)\n",
+    "    \n",
+    "    # Obtain the scenes by frame and timecode.\n",
+    "    scene_list = scene_manager.get_scene_list(video_manager.get_base_timecode())\n",
+    "    \n",
+    "    # Each scene is a tuple of (start, end) FrameTimecodes.\n",
+    "    # print('List of scene changes:')\n",
+    "    for i, scene in enumerate(scene_list):\n",
+    "        shot_boundaries.append(scene[1].get_timecode())\n",
+    "        #print(f'Scene {i+1}: Start {scene[0].get_timecode()} - End {scene[1].get_timecode()}')\n",
+    "\n",
+    "    video_manager.release()\n",
+    "    return [shot_boundaries, scene_list]\n",
+    "\n",
+    "def compute_time_difference(time1, time2):\n",
+    "    datetime1 = parse_timecode(time1)\n",
+    "    datetime2 = parse_timecode(time2)\n",
+    "\n",
+    "    difference = datetime1 - datetime2 if datetime1 > datetime2 else datetime2 - datetime1\n",
+    "\n",
+    "    return difference.total_seconds()\n",
+    "\n",
+    "def get_fps(video_path):\n",
+    "    video = cv2.VideoCapture(video_path)\n",
+    "    fps = video.get(cv2.CAP_PROP_FPS)\n",
+    "    video.release()\n",
+    "    return fps\n",
+    "\n",
+    "def timecode_to_frames(timecode, fps):\n",
+    "    time_obj = parse_timecode(timecode)\n",
+    "    total_seconds = time_obj.hour * 3600 + time_obj.minute * 60 + time_obj.second + time_obj.microsecond / 1e6\n",
+    "    frame_number = int(round(total_seconds * fps))\n",
+    "    return frame_number\n",
+    "\n",
+    "# Example usage:\n",
+    "# video_file_path = '../../dataset/originals/video4.mp4'\n",
+    "query_file_path = '../../dataset/Tests/video10_1_modified.mp4'\n",
+    "\n",
+    "# original_video_boundaries, original_scenes = find_scenes(video_file_path)\n",
+    "# original_video_differences = compute_differences(original_video_boundaries)\n",
+    "\n",
+    "query_video_boundaries, query_scenes = find_scenes(query_file_path)\n",
+    "query_video_differences = compute_differences(query_video_boundaries)[:-1]\n",
+    "\n",
+    "if(query_video_differences == []):\n",
+    "    print(\"No Shot Boundaries present in the query video\")\n",
+    "else:\n",
+    "    print(\"Query Video contains Shot Boundaries.\\nStarting shot boundary match now:\")\n",
+    "    # Read the JSON file\n",
+    "    with open('shotBoundSignature.json', 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "\n",
+    "    # Get the arrays from the data\n",
+    "    arrays = data['arrays']\n",
+    "\n",
+    "    # Iterate over each array\n",
+    "    for key, array in arrays.items():\n",
+    "        print(\"Array\", key + \":\")\n",
+    "        original_video_boundaries = array\n",
+    "        original_video_differences = compute_differences(original_video_boundaries)\n",
+    "        # print(original_video_differences)\n",
+    "\n",
+    "        if(len(original_video_differences) < len(query_video_differences)):\n",
+    "            print(\"No shot Boundary match found\\n\")\n",
+    "            continue\n",
+    "\n",
+    "        start_index = find_subarray_np(original_video_differences, query_video_differences)[0]\n",
+    "\n",
+    "        # print(original_video_boundaries)\n",
+    "        # print(query_video_boundaries)\n",
+    "\n",
+    "        if(start_index == -1):\n",
+    "            print(\"No shot Boundary match found\\n\")\n",
+    "        else:\n",
+    "            print(\"Shot Boundary match found at index\", start_index)\n",
+    "            print(key + \" is under consideration\\n\")\n",
+    "    \n",
+    "\n",
+    "    # if(start_index == 0):\n",
+    "    #     start_time = compute_time_difference(original_video_boundaries[start_index + 1], query_video_boundaries[start_index + 1])\n",
+    "    # else:\n",
+    "    #     start_time = compute_time_difference(original_video_boundaries[start_index], query_video_boundaries[0])\n",
+    "\n",
+    "    # fps = get_fps(video_file_path)\n",
+    "\n",
+    "    # query_video_duration = get_video_duration(query_file_path)\n",
+    "    # end_time = start_time + query_video_duration\n",
+    "\n",
+    "    # start_time = seconds_to_timestamp(start_time)\n",
+    "    # end_time = seconds_to_timestamp(end_time)\n",
+    "    # start_frame = timecode_to_frames(start_time, fps)\n",
+    "    # end_frame = timecode_to_frames(end_time, fps)\n",
+    "\n",
+    "    # print(f\"Start Time: {start_time} seconds\")\n",
+    "    # print(f\"End Time: {end_time} seconds\")\n",
+    "    # print(f\"Start Frame: {start_frame}\")\n",
+    "    # print(f\"End Frame: {end_frame}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -208,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
